# sso-cli

./: .gitignore  AGENTS.md  README.md  bump_and_publish.sh  publish.sh  pyproject.toml  sso_config.yaml.example
.github/workflows/: bump_and_release.yml  publish.yml
sso_cli/: __init__.py  auth.py  cli.py  config.py  post_install.py  secrets.py  setup_path.py  utils.py  wizard.py
